testdata/failed-volume-mount-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: failed-volume-mount
  name: failed-volume-mount
  namespace: app-benchmark-test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: failed-volume-mount
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: failed-volume-mount
      name: failed-volume-mount
    spec:
      containers:
        - image: bespinian/awesome-node:1.0.6
          name: awesome-node
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 120M
            requests:
              cpu: 100m
              memory: 120M
          volumeMounts:
            - mountPath: /tmp/test
              name: vol1
      volumes:
        - name: vol1
          secret:
            defaultMode: 420
            secretName: failed-volume-mount-secret
