testdata/initcontainer-ok-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: initcontainer-ok
  namespace: app-benchmark-test
  labels:
    app: initcontainer-ok
spec:
  replicas: 1
  template:
    metadata:
      name: initcontainer-ok
      labels:
        app: initcontainer-ok
    spec:
      initContainers:
        - name: busybox-init
          image: busybox
          args:
            - /bin/sh
            - -c
            - exit 0
      containers:
        - name: awesome-node
          image: bespinian/awesome-node:1.0.6
          env:
            - name: "HEALTHCHECK_LEAK_MEMORY"
              value: "FALSE"
          resources:
            limits:
              cpu: 100m
              memory: 120M
            requests:
              cpu: 100m
              memory: 120M
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 2
  selector:
    matchLabels:
      app: initcontainer-ok
