testdata/no-backend-ingress_traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: "/"
  name: no-backend
  namespace: app-benchmark-test
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: selector-mismatch
                port:
                  number: 80
            path: /no-backend
            pathType: Prefix
