testdata/ok-ingress_traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: "/"
  labels:
    app: ok
  name: ok
  namespace: app-benchmark-test
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: ok
                port:
                  number: 80
            path: /ok
            pathType: Prefix
