testdata/ok-public-ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
  labels:
    app: ok
  name: ok-public
  namespace: app-benchmark-test
spec:
  rules:
    - host: livelint.bespinian.io
      http:
        paths:
          - backend:
              service:
                name: ok
                port:
                  number: 80
            path: /
            pathType: Prefix
