testdata/pod-scheduling-failures-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-scheduling-failures
  namespace: app-benchmark-test
  labels:
    app: pod-scheduling-failures
spec:
  replicas: 1
  template:
    metadata:
      name: pod-scheduling-failures
      labels:
        app: pod-scheduling-failures
    spec:
      containers:
        - name: awesome-node
          image: bespinian/awesome-node:1.0.6
          env:
            - name: "HEALTHCHECK_LEAK_MEMORY"
              value: "TRUE"
            - name: "HEALTHCHECK_LEAK_INCREMENT_KB"
              value: "5000"
          resources:
            limits:
              cpu: 100m
              memory: 120000M
            requests:
              cpu: 100m
              memory: 120000M
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 2
  selector:
    matchLabels:
      app: pod-scheduling-failures
