testdata/readinessprobe-invalid-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readinessprobe-invalid
  namespace: app-benchmark-test
  labels:
    app: readinessprobe-invalid
spec:
  replicas: 1
  template:
    metadata:
      name: readinessprobe-invalid
      labels:
        app: readinessprobe-invalid
    spec:
      containers:
        - name: awesome-node
          image: bespinian/awesome-node:1.0.6
          env:
            - name: "HEALTHCHECK_LEAK_MEMORY"
              value: "FALSE"
          resources:
            limits:
              cpu: 100m
              memory: 120M
            requests:
              cpu: 100m
              memory: 120M
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 1337
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 999999
  selector:
    matchLabels:
      app: readinessprobe-invalid
