testdata/selector-mismatch.yml
apiVersion: v1
kind: Service
metadata:
  name: selector-mismatch
  namespace: app-benchmark-test
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: does-not-exist
